--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
-  <body>
+</head>
+<body>
     <section class="hero">
       <h1 class="hero-title"></h1>
     </section>
-  </body>
+      <h1 class="hero-title"></h1>
+    </section>
+</body>
 </html>
